# Rythm_Trainer

./: CMakeLists.txt  Clock.cpp  Clock.h  RhythmMaker.cpp  RhythmMaker.h  builder.sh  main.cpp
src/: main.cpp
src/code/: Clock.cpp
src/code/headers/: Clock.h
tests/: CMakeLists.txt  UnitTests.cpp
